# Scraping_Discord_Bot

./: .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt  scrap_yahoo.py  translate.py
